# selectia

./: .gitignore  Cargo.toml  README.md  selectia.db
.github/workflows/: release.yml
crates/demucs/: Cargo.toml  backend.py  env.yml
crates/demucs/src/: backend.rs  lib.rs  prelude.rs
crates/macromamba/: Cargo.toml
crates/macromamba/src/: lib.rs
crates/macromamba/tests/: executor.py  solve_demucs.rs
crates/selectia/: Cargo.toml  build.rs
crates/selectia-audio-file/: Cargo.toml
crates/selectia-audio-file/src/: audio_buffer.rs  audio_file.rs  dc_blocker.rs  demux.rs  error.rs  lib.rs  prelude.rs
crates/selectia-audio-server/: Cargo.toml
crates/selectia-audio-server/src/: backend.rs  error.rs  lib.rs  prelude.rs  spec.rs
crates/selectia-tauri/: Cargo.toml  build.env  build.rs
crates/selectia-tauri-dto/: Cargo.toml
crates/selectia-tauri-dto/src/: events.rs  lib.rs  mod.rs  models.rs  prelude.rs
crates/selectia-tauri/src/: app.rs  commands.rs  error.rs  ext.rs  lib.rs  prelude.rs  settings.rs
crates/selectia-tauri/src/context/: interactive_list_context.rs  mod.rs
crates/selectia/migrations/: 20241115162654_init.sql  20241115204304_populate.sql
crates/selectia/src/: lib.rs  prelude.rs  test_utils.rs
crates/selectia/src/analyser/: bpm_analyser.rs  entries_analyser.rs  mod.rs
crates/selectia/src/database/: mod.rs  models.rs
crates/selectia/src/database/views/: entry_view.rs  mod.rs
crates/selectia/src/ext/: mod.rs
crates/selectia/src/services/: audio_server.rs  demuxer.rs  embedding.rs  file_loader.rs  mod.rs  state_machine.rs
crates/selectia/src/services/audio_player/: backend.rs  deck.rs  mod.rs
crates/selectia/src/services/worker/: mod.rs  tasks.rs
crates/selectia/src/services/worker/tasks/: file_analysis_task.rs  mod.rs  stem_extraction_task.rs
crates/selectia/src/tasks/: generate_cluster.rs  load_directory.rs  mod.rs
crates/selectia/tests/: file_analysis.rs
crates/spleeter/: Cargo.toml
crates/spleeter/src/: error.rs  lib.rs  prelude.rs
crates/spleeter/tests/: split_audio.rs
crates/theater/: Cargo.toml
crates/theater/src/: context.rs  error.rs  lib.rs  prelude.rs  service.rs
crates/theater/tests/: basic.rs
crates/theater/theater-core/: Cargo.toml
crates/theater/theater-core/src/: callback.rs  context.rs  dispatcher.rs  error.rs  lib.rs  prelude.rs
crates/theater/theater-core/src/service/: mod.rs
crates/theater/theater-derive/: Cargo.toml
crates/theater/theater-derive/src/: lib.rs  prelude.rs
crates/wavision/: Cargo.toml
crates/wavision/src/: error.rs  lib.rs  prelude.rs
scripts/: regenerate_db.sh
selectia/: Cargo.toml  selectia.db
selectia-app/: README.md  package-lock.json  package.json
selectia-app/.github/workflows/: release.yml
selectia-app/src/: App.css  App.tsx
selectia-app/src-tauri/: Cargo.toml  build.env  build.rs  tauri.conf.json
selectia-app/src-tauri/src/: app.rs  commands.rs  lib.rs  main.rs  prelude.rs  scheduler.rs  settings.rs
selectia-app/src-tauri/src/context/: interactive_list_context.rs
selectia-app/src-tauri/src/dto/: mod.rs  to_frontend.rs
selectia-app/src/components/atoms/: Button.tsx  Icon.tsx  Label.tsx  TextInput.tsx
selectia-app/src/components/molecules/: ColumnResizer.tsx  DropDown.tsx  DropDownButton.tsx  DropZone.tsx  ExpandableRegion.tsx  SplitPanel.tsx  Table.tsx
selectia-app/src/components/organisms/: ActionBar.tsx  FilterSection.tsx  InteractiveList.tsx  InteractiveTable.tsx  InteractiveTableRow.tsx  StatusBar.tsx  TaskManager.tsx  ToolBar.tsx
selectia-app/src/hooks/: ClickOutside.ts  EntryHook.ts  ImportFolderHook.ts  TagHook.ts  TagNamesHook.ts
selectia-app/src/selectia-rs/: index.ts  models.ts
selectia/migrations/: 20241115162654_init.sql  20241115204304_populate.sql
selectia/sql/: query_entry.sqlite3-query  test-1.sqlite3-query
selectia/src/: lib.rs  prelude.rs
selectia/src/analyser/: file_analyser.rs  mod.rs
selectia/src/database/: mod.rs  models.rs
selectia/src/ext/: path_ext.rs
selectia/src/services/: audio_server.rs  embedding.rs  file_loader.rs  mod.rs  state_machine.rs
selectia/src/tasks/: generate_cluster.rs  get_tag_creation_suggestion.rs  load_directory.rs
(+30 files in other folders)
