[package]
name = "demucs"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
macromamba = { path = "../macromamba" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = {version = "0.7", features=["codec"]}
futures-util = "0.3"