[package]
name = "selectia-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
selectia-tauri-dto = { path = "../selectia-tauri-dto" }
dotenv = "0.15.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tauri-plugin-dialog = "2"
eyre = "0.6.12"
thiserror = "2"
uuid = { version = "1.1.2", features = ["v4"] }
futures = "0.3.31"
dirs = "5.0.1"

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
selectia = { path = "../selectia" }
selectia-tauri-dto = { path = "../selectia-tauri-dto" }