[package]
name = "selectia"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
eyre = "0.6.12"
futures = "0.3.31"
# rust-bert = { version = "0.23.0", features = ["cached-path", "default-tls", "dirs", "lazy_static", "remote"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
nucleo-matcher = { version = "0.3.1" }
atomic_float = { version = "1.1.0" }
chrono = { version = "0.4" }
symphonia = "0.5.4"
cpal = "0.15"
dasp = { version = "0.11.0", features = ["all"] }
tempdir = "0.3.5"
demucs = { path = "../demucs" }
selectia-audio-file = { path = "../selectia-audio-file" }