[package]
name = "spleeter"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
selectia-audio-file = { path = "../selectia-audio-file" }

[dependencies]
tensorflow = { version = "0.21.0" }
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
