[package]
name = "theater"
version = "0.1.0"
edition = "2021"

[dependencies]
theater-core = { path = "./theater-core" }
theater-derive = { path = "./theater-derive" }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
